Fix social link size on mobile

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -56,6 +56,7 @@
     border-top: none;
   }
 
+  .socialLink,
   .socialLink svg {
     width: 1.5rem;
     height: 1.5rem;
